--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     ],
     "baseUrl": "./",
     "paths": {
-      "@audit/*": ["src/*"],
+      "@audit/*": ["src/*"]
     }
   },
   "include": [
