--- a/src/config/env.yml
+++ b/src/config/env.yml
@@ -3,9 +3,9 @@ offline:
   KINESIS_HOST: localhost
   KINESIS_PORT: 4567
   KINESIS_REGION: us-east-2
-  KINESIS_STREAM_NAME_AUDIT_LOG: qi-audit-log-stream-OFFLINE
+  KINESIS_STREAM_NAME_AUDIT_LOG: qi-audit-log-stream
 dev:
   KINESIS_HOST: localhost
   KINESIS_PORT: 4567
   KINESIS_REGION: us-east-2
-  KINESIS_STREAM_NAME_AUDIT_LOG: qi-audit-log-stream-DEV
+  KINESIS_STREAM_NAME_AUDIT_LOG: qi-audit-log-stream
