--- a/src/config/env.yml
+++ b/src/config/env.yml
@@ -3,9 +3,13 @@ offline:
   KINESIS_HOST: localhost
   KINESIS_PORT: 4567
   KINESIS_REGION: us-east-2
-  KINESIS_STREAM_NAME_AUDIT_LOG: qi-audit-log-stream
+  KINESIS_STREAM_NAME_AUDIT_LOG: qi-assess-audit-log-stream
+  ELASTIC_SEARCH_HOST: http://localhost:9200
+  ELASTIC_CLIENT_LOG: trace
 dev:
-  KINESIS_HOST: localhost
+  KINESIS_HOST: <AWS>
   KINESIS_PORT: 4567
   KINESIS_REGION: us-east-2
-  KINESIS_STREAM_NAME_AUDIT_LOG: qi-audit-log-stream
+  KINESIS_STREAM_NAME_AUDIT_LOG: qi-assess-audit-log-stream
+  ELASTIC_SEARCH_HOST: <AWS_ELASTICSEARCH>
+  ELASTIC_CLIENT_LOG: trace
