--- a/serverless.yml
+++ b/serverless.yml
@@ -22,10 +22,10 @@ functions:
       - stream:
           type: kinesis
           #arn: need an arn
-          streamName: qi-audit-log-stream
+          streamName: qi-assess-audit-log-stream
           arn:
             Fn::GetAtt:
-              - qi-audit-log-stream
+              - qi-assess-audit-log-stream
               - Arn
           batchSize: 100
           startingPosition: LATEST
