Added kinesis agent

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/jest": "^22.0.1",
     "@types/js-yaml": "^3.11.2",
     "@types/node": "^8.0.0",
+    "@types/tail": "^1.2.0",
     "aws-sdk": "^2.323.0",
     "chrome-launcher": "^0.10.5",
     "concurrently": "^4.0.1",
@@ -59,6 +60,7 @@
     "serverless-domain-manager": "^2.6.5",
     "serverless-offline": "^3.25.14",
     "serverless-webpack": "^5.2.0",
+    "tail": "^2.0.0",
     "ts-jest": "^22.0.1",
     "ts-loader": "^5.2.1",
     "ts-node": "^3.3.0",
